--- a/Weather_App/index.html
+++ b/Weather_App/index.html
@@ -18,9 +18,9 @@
         <div class="date">Thursday 4 March 2022</div>
       </section>
       <div class="current">
-        <div class="temp">15<span>°c</span></div>
+        <div class="temp">15<span>°C</span></div>
         <div class="weather">Sunny</div>
-        <div class="hi-low">18°c / 22°c</div>
+        <div class="hi-low">18°C / 22°C</div>
       </div>
     </main>
   </div>
